# pdfTranslate

./: .gitignore  LICENSE  README.md  attention.json  main.py  pyproject.toml  sample.md
.agents/plugins/: marketplace.json
openspec/changes/add-provider-based-translation/: test-plan.md  verification-notes.md
openspec/changes/archive/2026-04-28-extract-pdf-content-to-md/: design.md  proposal.md
openspec/changes/archive/2026-04-29-add-provider-based-translation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-29-extract-pdf-images-to-assets/: design.md  (+4 more)
openspec/changes/extract-pdf-content-to-md/: tasks.md  test-plan.md
openspec/changes/restore-translated-layout-to-pdf/: .openspec.yaml  design.md  tasks.md  test-plan.md
openspec/specs/pdf-content-extraction/: spec.md
openspec/specs/pdf-image-assets/: spec.md
openspec/specs/pdf-layout-config/: spec.md
openspec/specs/pdf-layout-rendering/: spec.md
openspec/specs/pdf-layout-translation/: spec.md
pdftranslate/: __init__.py  cli.py  docling_adapter.py  extract.py  image_assets.py  layout.py  layout_io.py  markdown.py  pdf_renderer.py  translation.py
plugins/pdftranslate-codex/.codex-plugin/: plugin.json
plugins/pdftranslate-codex/scripts/: codex_layout_translation.py  translate_pdf_with_codex.py
scripts/: install.sh
tests/: fixtures.py  test_cli.py  test_codex_plugin_script.py  test_docling_adapter.py  test_extract.py  test_image_assets.py  test_layout.py  test_layout_io.py  test_layout_schema_doc.py  test_markdown.py  test_packaging.py  test_pdf_renderer.py  test_translation.py
(+33 files in other folders)
