[project]
name = "pdftranslate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdfium2>=5.0.0",
]

[project.scripts]
pdftranslate = "pdftranslate.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdftranslate"]
