[project]
name = "pdftranslate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "docling==2.10.0",
    "numpy<2",
    "pypdfium2>=4.30.0,<5.0.0",
    "reportlab>=4.4.10",
    "torch==2.2.2",
]

[project.scripts]
pdftranslate = "pdftranslate.cli:main"

[dependency-groups]
dev = [
    "pypdf>=6.10.2",
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdftranslate"]
